# wordlist

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  README.md  VALIDATION_REPORT.md  analyze_words.py  automated_claude_validator.py  claude_criteria_validator.py  claude_optimized_generator.py  claude_validated_generator.py  claude_validator.py  clean_wordlist.py  compare_wordlists.py  download_sources.py  enhanced_generator.py  evaluate_readability.py  generate_wordlist.py  premium_generator.py  process_claude_response.py  pyproject.toml  refined_generator.py  self_validated_generator.py  test_validation_system.py  ultra_clean_generator.py  validation_analysis.py  word_scorer.py
tests/: test_word_scorer.py
validation_logs/: batch_B001_prompt.txt  validation_session_1752257964.json
wordlists/: README.md  claude_optimized_65536.json  claude_optimized_65536.txt  cleaning_log.txt  enhanced_wordlist_65536.json  enhanced_wordlist_65536.txt  gold_wordlist_65536.json  gold_wordlist_65536_cleaned.txt  premium_wordlist_65536.json  premium_wordlist_65536.txt  readability_evaluation.json  refined_wordlist_65536.json  refined_wordlist_65536.txt  self_validated_65536.json  self_validated_65536.txt  self_validation_log.json  top_english_100000.txt  ultra_clean_65536.json  ultra_clean_65536.txt  validation_log.txt  validation_progress.json  word_analysis.json  wordlist_65536.json  wordlist_65536.txt
